--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -466,3 +466,66 @@ button {
       display: flex;
     }
   }
+
+  .error {
+    color: red;
+  }
+  .copy-write-contaier {
+    position: absolute;
+    bottom: 2rem;
+    color: #99a7bf;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 11.11px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px;
+    /* 144.014% */
+  }
+  .term-condition {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .logo-image-container {
+    min-height: 100vh;
+    background-image: url("../img/Header.png");
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .logo {
+    padding: 2rem 3rem;
+    color: #fff;
+  }
+  .logo {
+    h4 {
+      overflow: hidden;
+      color: #fff;
+      text-overflow: ellipsis;
+      font-family: Roboto;
+      font-size: 1.5rem;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 40px; /* 125% */
+    }
+    /* span {
+      color: #fff;
+      font-family: Roboto;
+      font-size: 1rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 25px; 
+    } */
+  }
+  .login-field-group {
+    display: flex;
+    justify-content: center;
+  }
+  .copy-write-container {
+    display: flex;
+    justify-content: center;
+  }
+  .verification-conatiner {
+    height: 100%;
+  }
