--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -540,3 +540,16 @@ button {
 .new-slider-m{
   width: 46px; text-align: center; color: black; font-size: 12px; font-family: Roboto; font-weight: 400; line-height: 16px; word-wrap: break-word
 }
+
+.newTxtID {
+  font-weight: 500;
+  size: 16px;
+  line-height: 24px;
+}
+.newSubTxt{
+  color: #000;
+  font-weight: 400;
+  font-family: Roboto;
+  size: 18px;
+  line-height: 26px;
+}
